parser/src/snapshots/emerald_lang_parser__context__tests__assign_tuple.snap
---
source: src/context.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 18,
            },
        ),
        custom: (),
        node: Assign {
            targets: [
                Located {
                    location: Location {
                        row: 1,
                        column: 1,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 5,
                        },
                    ),
                    custom: (),
                    node: Tuple {
                        elts: [
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 1,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 2,
                                    },
                                ),
                                custom: (),
                                node: Name {
                                    id: "x",
                                    ctx: Store,
                                },
                            },
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 4,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 5,
                                    },
                                ),
                                custom: (),
                                node: Name {
                                    id: "y",
                                    ctx: Store,
                                },
                            },
                        ],
                        ctx: Store,
                    },
                },
            ],
            value: Located {
                location: Location {
                    row: 1,
                    column: 10,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 17,
                    },
                ),
                custom: (),
                node: Tuple {
                    elts: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 10,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 11,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 13,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 14,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 16,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 17,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Int(
                                    3,
                                ),
                                kind: None,
                            },
                        },
                    ],
                    ctx: Load,
                },
            },
            type_comment: None,
        },
    },
]
