parser/src/snapshots/emerald_lang_parser__context__tests__assign_with.snap
---
source: src/context.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 17,
            },
        ),
        custom: (),
        node: With {
            items: [
                Withitem {
                    context_expr: Located {
                        location: Location {
                            row: 1,
                            column: 5,
                        },
                        end_location: Some(
                            Location {
                                row: 1,
                                column: 6,
                            },
                        ),
                        custom: (),
                        node: Constant {
                            value: Int(
                                1,
                            ),
                            kind: None,
                        },
                    },
                    optional_vars: Some(
                        Located {
                            location: Location {
                                row: 1,
                                column: 10,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 11,
                                },
                            ),
                            custom: (),
                            node: Name {
                                id: "x",
                                ctx: Store,
                            },
                        },
                    ),
                },
            ],
            body: [
                Located {
                    location: Location {
                        row: 1,
                        column: 13,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 17,
                        },
                    ),
                    custom: (),
                    node: Pass,
                },
            ],
            type_comment: None,
        },
    },
]
