parser/src/snapshots/emerald_lang_parser__context__tests__aug_assign_attribute.snap
---
source: src/context.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 16,
            },
        ),
        custom: (),
        node: AugAssign {
            target: Located {
                location: Location {
                    row: 1,
                    column: 0,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 3,
                    },
                ),
                custom: (),
                node: Attribute {
                    value: Located {
                        location: Location {
                            row: 1,
                            column: 0,
                        },
                        end_location: Some(
                            Location {
                                row: 1,
                                column: 1,
                            },
                        ),
                        custom: (),
                        node: Name {
                            id: "x",
                            ctx: Load,
                        },
                    },
                    attr: "y",
                    ctx: Store,
                },
            },
            op: Add,
            value: Located {
                location: Location {
                    row: 1,
                    column: 8,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 15,
                    },
                ),
                custom: (),
                node: Tuple {
                    elts: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 8,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 9,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 11,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 12,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 14,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 15,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Int(
                                    3,
                                ),
                                kind: None,
                            },
                        },
                    ],
                    ctx: Load,
                },
            },
        },
    },
]
