parser/src/snapshots/emerald_lang_parser__context__tests__aug_assign_name.snap
---
source: src/context.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 6,
            },
        ),
        custom: (),
        node: AugAssign {
            target: Located {
                location: Location {
                    row: 1,
                    column: 0,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 1,
                    },
                ),
                custom: (),
                node: Name {
                    id: "x",
                    ctx: Store,
                },
            },
            op: Add,
            value: Located {
                location: Location {
                    row: 1,
                    column: 5,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 6,
                    },
                ),
                custom: (),
                node: Constant {
                    value: Int(
                        1,
                    ),
                    kind: None,
                },
            },
        },
    },
]
